# verda-sxtelo

./: .gitignore  Makefile.am  README  autogen.sh  build-ios-dependencies.sh  build.gradle  configure.ac  freetype-version.sh  get-dependencies.sh  meson.build  meson_options.txt  settings.gradle
app/: CMakeLists.txt  build-freetype-ninja.sh  build-lib-ninja.sh  build.gradle  generate_cross.py  get_build_type.sh
app/src/main/: AndroidManifest.xml
app/src/main/assets/: add-letter-guide.mpng  board.mpng  boxes-guide.mpng  buttons.mpng  connection-lost.mpng  cursor.mpng  end-guide.mpng  firework.mpng  how-steal-guide.mpng  menu.mpng  shadow.mpng  shout-guide.mpng  steal-word-guide.mpng  tiles-0.mpng  tiles-1.mpng  tiles.mpng  valid-words-guide.mpng  vsx-fireworks-fragment.glsl  vsx-fireworks-vertex.glsl  vsx-layout-fragment.glsl  vsx-solid-fragment.glsl  vsx-solid-vertex.glsl  vsx-texture-fragment.glsl  vsx-texture-vertex.glsl
app/src/main/java/uk/co/busydoingnothing/anagrams/: GameActivity.java  GameLayout.java  GameView.java  Prefs.java
app/src/main/res/layout/: game.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-eo/: strings.xml
app/src/main/res/values-fr/: strings.xml
cgi/: invite-cgi.c  make-crc-table.py  meson.build  vsx-generate-qr.c  vsx-generate-qr.h
client/: Makefile.am  generate-qr.c  gml-connection.c  gml-connection.h  gml-main.c  gml-marshal.list  meson.build  test-bsp.c  test-client-connection.c  test-font-glyphs.c  test-font-shavian.c  test-game-state.c  test-glyph-hash.c  test-id-url.c  test-image-loader.c  test-instance-state.c  test-main-thread.c  test-qr.py  test-tile-texture.c  test-worker.c  vsx-array-object.c  vsx-array-object.h  vsx-asset-android.c  vsx-asset-android.h  vsx-asset-linux.c  vsx-asset-linux.h  vsx-asset.h  vsx-board-painter.c  vsx-board-painter.h  vsx-board.c  vsx-board.h  vsx-bsp.c  vsx-bsp.h  vsx-button-painter.c  vsx-button-painter.h  vsx-connection.c  vsx-connection.h  vsx-copyright-painter.c  vsx-copyright-painter.h  vsx-dialog-painter.c  (+96 more)
common/: meson.build  test-utf8.c  vsx-bitmask.c  vsx-bitmask.h  vsx-buffer.c  vsx-buffer.h  vsx-file-error.c  vsx-file-error.h  vsx-hash-table.c  vsx-hash-table.h  vsx-id-url.c  vsx-id-url.h  vsx-list.c  vsx-list.h  vsx-netaddress.c  vsx-netaddress.h  vsx-proto-types.h  vsx-proto.c  vsx-proto.h  vsx-qr-data.h  vsx-qr.c  vsx-signal.h  vsx-socket.c  vsx-socket.h  vsx-utf8.c  vsx-utf8.h  vsx-util.h
doc/: protocol.txt  websocket-protocol.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 12.txt  13.txt  14.txt
fonts/: symbols.sfd
ios-app/Grabagram/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Grabagram.entitlements  Info.plist  MainViewController.h  MainViewController.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m  vsx-asset-ios.h  vsx-asset-ios.m
ios-app/Grabagram.xcodeproj/: project.pbxproj
ios-app/Grabagram.xcodeproj/xcuserdata/demo.xcuserdatad/xcschemes/: xcschememanagement.plist
ios-app/Grabagram/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
ios-app/Grabagram/en.lproj/: Localizable.strings  Main.strings
ios-app/Grabagram/eo.lproj/: Localizable.strings  Main.strings
ios-app/Grabagram/fr.lproj/: Localizable.strings  Main.strings
scripts/: create-qr-base.py  create-tile-texture.py
server/: Makefile.am  gen-http-char-table.rb  gml-arguments.c  gml-arguments.h  gml-chunked-iconv.c  gml-chunked-iconv.h  gml-conversation-set.c  gml-conversation-set.h  gml-conversation.c  gml-conversation.h  gml-enum-types.c.in  gml-enum-types.h.in  gml-http-parser.c  gml-keep-alive-handler.c  gml-keep-alive-handler.h  gml-leave-handler.c  gml-leave-handler.h  gml-log.h  gml-main-context.c  gml-main-context.h  gml-main.c  gml-new-person-handler.c  gml-new-person-handler.h  gml-parse-content-type.c  gml-parse-content-type.h  gml-person-set.c  gml-person-set.h  gml-person.c  gml-person.h  gml-request-handler.c  gml-response.h  gml-send-message-handler.c  gml-server.c  gml-start-typing-handler.c  gml-stop-typing-handler.c  gml-stop-typing-handler.h  gml-string-response.h  gml-watch-person-handler.c  gml-watch-person-handler.h  gml-watch-person-response.c  (+104 more)
src/: Makefile.am  gml-buffer-usage.h  gml-chunked-iconv.c  gml-chunked-iconv.h  gml-conversation-set.c  gml-conversation-set.h  gml-conversation.c  gml-conversation.h  gml-error-response.c  gml-error-response.h  gml-http-parser.c  gml-http-parser.h  gml-leave-handler.c  gml-leave-handler.h  gml-log.c  gml-log.h  gml-main-context.c  gml-main-context.h  gml-main.c  gml-new-person-handler.c  gml-new-person-handler.h  gml-new-person-response.c  gml-new-person-response.h  gml-parse-content-type.c  gml-parse-content-type.h  gml-person-set.c  gml-person-set.h  gml-person.c  gml-person.h  gml-request-handler.c  gml-request-handler.h  gml-response.c  gml-response.h  gml-send-message-handler.c  gml-send-message-handler.h  gml-server.c  gml-server.h  gml-start-typing-handler.h  gml-string-response.c  gml-string-response.h  (+3 more)
web/: Makefile.am  chat.html  chat.js  en-sv.language-file  en.language-file  eo.language-file  fr.language-file  gemelo.css  gemelo.js  help.html  index.html  meson.build  translate-file.pl  translate-file.py  verda-sxtelo.css  verda-sxtelo.js
web/en/: help.html
web/en-sv/: help.html  meson.build
web/eo/: help.html
