option('systemd', type : 'boolean', value : true)
option('server', type : 'boolean', value : true)
option('client', type : 'boolean', value : true)
option('jni', type : 'boolean', value : false)
option('clientlib', type : 'boolean', value : false)
option('invite-cgi', type : 'boolean', value : false)
option('fastcgi', type : 'boolean', value : false)
